[metadata]
name = gpt
author = Carlos Brandt
description = Tools for Geo-planetary data handling
url = https://github.com/chbrandt/gpt
keywords =
    geoscience
    geopackage
    planetary
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
long_description = file:README.md
long_description_content_type = text/markdown
license_files = LICENSE.txt

[versioneer]
VCS = git
style = pep440
versionfile_source = gpt/_version.py
versionfile_build = gpt/_version.py
tag_prefix =
parentdir_prefix = gpt-

[options]
packages = find:
python_requires = >=3.6
install_requires =
    sh
    fiona
    pyproj
    pytest
    geopandas
zip_safe = False
