[metadata]
name = gpt
url = https://github.com/chbrandt/gpt
author = Carlos H. Brandt
description = Geo-P data handling Tools
long_description = file:README.md
long_description_content_type = text/markdown

keywords =
    geoscience
    geopackage
    planetary

classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research

license_files = LICENSE.txt


[versioneer]
VCS = git
style = pep440
versionfile_source = gpt/_version.py
versionfile_build = gpt/_version.py
tag_prefix =
parentdir_prefix = gpt-


[options]
python_requires = >=3.6
packages = find:
install_requires =
    sh
    fiona
    pyproj
    pytest
    geopandas
zip_safe = False
