[metadata]
name = gpt
url = https://github.com/chbrandt/gpt
author = Carlos H. Brandt
description = Geo-P data handling Tools
long_description = file:README.md
long_description_content_type = text/markdown

keywords =
    geoscience
    geopackage
    planetary

classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research

license_files = LICENSE.txt


[versioneer]
VCS = git
style = pep440
versionfile_source = gpt/_version.py
versionfile_build = gpt/_version.py
tag_prefix =
parentdir_prefix = gpt-


[options]
python_requires = >=3.6
packages = find:
install_requires =
    click>=8
    fiona>=1.8
    geopandas>=0.9
    luigi>=3
    matplotlib
    pyproj>=3.1
    pytest
    rasterio>=1.2
    requests
    sh
    tqdm
zip_safe = False
